[workspace]
members = ["qingke-rt", "qingke-rt/macros"]

[workspace.package]
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/qingke"
documentation = "https://docs.rs/qingke"
homepage = "https://github.com/ch32-rs/qingke"
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT/Apache-2.0"
version = "0.2.1" # for rt and macros
edition = "2021"

[package]
name = "qingke"
# version.workspace = true
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
description = "Low level access to WCH's QingKe RISC-V processors"
keywords = ["qingke", "wch", "riscv", "ch32v"]
readme = "README.md"

[dependencies]
bit_field = "0.10.2"
riscv = "0.11.1"
critical-section = { version = "1.1.3", features = [
    "restore-state-u8",
], optional = true }
defmt = { version = "0.3.8", optional = true }

[features]
critical-section-impl = ["dep:critical-section"]
defmt = ["dep:defmt"]
v3 = []

[package.metadata.docs.rs]
targets = ["riscv32imac-unknown-none-elf"]
