[workspace]
members = ["qingke-rt", "qingke-rt/macros"]

[workspace.package]
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/qingke"
documentation = "https://docs.rs/qingke"
homepage = "https://github.com/ch32-rs/qingke"
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT/Apache-2.0"
version = "0.5.0" # for rt and macros
edition = "2021"

[package]
name = "qingke"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
description = "Low level access to WCH's QingKe RISC-V processors"
keywords = ["qingke", "wch", "riscv", "ch32v"]
readme = "README.md"

[dependencies]
bit_field = "0.10.2"
riscv = "0.12.0"
critical-section = { version = "1.2.0", features = [
    "restore-state-bool",
], optional = true }
defmt = { version = "0.3.8", optional = true }

[features]
critical-section-impl = ["dep:critical-section"]
defmt = ["dep:defmt"]
v3 = []
unsafe-trust-wch-atomics = []

[package.metadata.docs.rs]
targets = ["riscv32imac-unknown-none-elf"]
