[workspace]
members = ["qingke-rt", "qingke-rt/macros"]

[workspace.package]
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/qingke"
documentation = "https://docs.rs/qingke"
homepage = "https://github.com/ch32-rs/qingke"
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT/Apache-2.0"
version = "0.7.0" # for rt and macros
edition = "2024"

[package]
name = "qingke"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
description = "Low level access to WCH's QingKe RISC-V processors"
keywords = ["qingke", "wch", "riscv", "ch32v"]
readme = "README.md"

[dependencies]
bit_field = "0.10.2"
riscv = "0.15.0"
cfg-if = "1.0"
critical-section = { version = "1.2.0", features = [
    "restore-state-bool",
], optional = true }
defmt = { version = "1.0.1", optional = true }

[features]
critical-section-impl = ["dep:critical-section"]
defmt = ["dep:defmt"]
v2 = []
_v3 = []
v3a = ["_v3"]
v3b = ["_v3"]
v3f = ["_v3", "_inestcr"]
v4 = []
_v5 = ["_inestcr"]
v5f = ["_v5"]
# CSR 0xBC1 (inestcr / interrupt nest control) is V5-only in the
# generic QingKe IP family; it is also wired up on the CH32H417 V3F
# extension. V2 / V3A / V3B / V4 raise an illegal-instruction trap
# when 0xBC1 is accessed, so the register module is gated behind
# this umbrella feature.
_inestcr = []
# Multi-core PFIC extensions (HartId, wake_other_core).
# Only meaningful on chips whose PFIC implements HART_ID and WAKEIP0/1,
# currently CH32H417 (V3F + V5F). Writing WAKEIP0/1 on chips without
# them is undefined behavior, hence the opt-in gate.
dual-core = []
unsafe-trust-wch-atomics = []

[package.metadata.docs.rs]
targets = ["riscv32imc-unknown-none-elf"]
