[package]
name = "qingke-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
description = "Minimal runtime / startup for WCH's RISC-V MCUs, managed by the ch32-rs team"
keywords = ["qingke", "wch", "riscv", "ch32v"]
readme = "README.md"


[features]
v2 = []
v3 = ["qingke/v3"]
v4 = []
# v5 is not released yet
# v5 = []

highcode = []

[dependencies]
qingke-rt-macros = { path = "./macros", version = "0.3" }
qingke = { path = "../", version = "0.3" }

[package.metadata.docs.rs]
targets = ["riscv32imac-unknown-none-elf"]
