[package]
name = "qingke-rt-macros"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32v-rs/qingke"
documentation = "https://docs.rs/qingke-rt-macros"
homepage = "https://github.com/ch32v-rs/qingke-rt-macros"
categories = ["embedded", "no-std"]
description = "Macros re-exported in `qingke-rt`"
keywords = ["riscv", "runtime", "startup"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]
